--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -23,6 +23,25 @@ html{
   /* creates padding around scroll thumb */
 }
 
+.ml-1{
+  margin-left: 1rem;
+}
+.ml-3{
+  margin-left: 3rem;
+}
+.mr-half{
+  margin-right: .5rem;
+}
+.mr-1{
+  margin-right: 1rem;
+}
+.mr-3{
+  margin-right: 3rem;
+}
+.mt-1{
+  margin-top: 1rem;
+}
+
 body{
   overflow: overlay;
   background-color: transparent;
@@ -30,72 +49,142 @@ body{
   font-size: 100%;
 }
 
+.nav{
+  /* position: sticky; */
+  padding: 2rem 10%;
+  word-spacing: rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #F2F2F2;
+  height: 10%;
+  color: black !important;
+}
+
+.nav--left{
+  color: #201B3C;
+  transform: scaleX(1.2);
+}
+
+.nav--right > a{
+  margin-right: 3rem;
+  text-decoration: none;
+}
+
+.nav__contact{
+  margin-right: 1rem;
+  border-style: none;
+  border-radius: 5px;
+  padding: .5rem 1rem;
+  font-weight: 750;
+  background-color: #FFC965;
+  color: #3E4A55;
+  box-shadow: 0 10px 10px -3px #D9D9D9;
+  transform: scaleX(1.1);
+}
+
 .header{
   display: grid;
   grid-template-columns: 2fr 1.5fr;
-  height: 100vh;
+  height: 80vh;
   background-color: #201B3C;
+  background-color: white;
+  background-color: #F2F2F2;
   padding: 0 10%;
+  background-image: url('Polygon Luminary.svg');
+  background-image: url('Animated Shape.svg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
 }
 
 .header--left{
+  /* margin-top: 3rem; */
   display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 0 0 0 6rem;
-  color: white;
+  color: #201B3C;
+  /* margin-top: rem; */
   /* margin-right: .5rem; */
-  margin-bottom: 5rem;
-  font-size: 3rem;
+  /* margin-bottom: 5rem; */
+  font-size: 2rem;
+  font-weight: 700;
+  margin-left: 9rem;
+  margin-bottom: 3rem;
   /* letter-spacing: .09rem; */
 }
 
 .header--left p{
   margin: 0;
+  transform: scaleX(1.3);
 }
 
 .header__contact{
   display: flex;
-  align-self: flex-end;
+  align-items: center;
   margin-top: 5rem;
-  margin-right: 8rem;
-  font-size: 3rem;
-  padding: 1rem;
-  width: auto;
-  border-radius: 100px;
+  margin-left: -5rem;
+  font-size: 1rem;
+  transform: scaleX(1.2);
+  padding: .025rem 2rem;
+  width: fit-content;
+  border-radius: 5px;
   border: none;
-  background-color: tomato;
-  color: white;
+  background-color: #FFC965;
+  color: #3E4A55;
+  box-shadow: 0 20px 20px -6px #D9D9D9;
+}
+
+.header__info{
+  font-size: 13px;
+  margin: 3rem 0;
 }
 
 .header--right{
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
-  margin-top: 15rem;
+  /* margin-top: 6rem; */
 }
+
+.picture__background{
+  height:35rem;
+  width:20rem;
+  background: white;
+}
+
+.header__picture{
+  /* border-radius: 50%; */
+  /* border: 3rem solid #FFC965; */
+  /* background: #eed8b393; */
+  z-index: 1;
+  height: auto;
+  width: 35rem;
+  padding: 1rem;
+  float: left;
+  margin-bottom: 5rem;
+}
+
 
 .header--links{
   word-spacing: 2rem;
   font-size: 2.5rem;
-  color: white;
+  /* color: white; */
+  /* color: #201B3C !important; */
   margin-top: 2rem;
 }
 a{
   color: white;
+  color: #201B3C;
+  color: grey;
 }
 a:visited{
   color: white;
-}
+  color: #201B3C;
+  color: grey;
 
-.top__picture{
-  border-radius: 50%;
-  border: .5rem solid grey;
-  z-index: 1;
-  height: 20rem;
-  width: 20rem;
-  padding: 1px;
-  float: left;
 }
 
 .sidebar{
