--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
 html{
   font-family: 'Poppins', sans-serif;
 }
@@ -127,7 +131,7 @@ body{
   margin-left: -5rem;
   font-size: 1rem;
   transform: scaleX(1.2);
-  padding: .025rem 2rem;
+  padding: .8rem 2rem;
   width: fit-content;
   border-radius: 5px;
   border: none;
@@ -174,19 +178,98 @@ body{
 .header--links{
   word-spacing: 2rem;
   font-size: 2.5rem;
-  /* color: white; */
   /* color: #201B3C !important; */
   margin-top: 2rem;
+  margin-left: -6rem; 
 }
+
 a{
   color: white;
   color: #201B3C;
-  color: grey;
+  /* color: grey; */
 }
 a:visited{
   color: white;
   color: #201B3C;
-  color: grey;
+  /* color: grey; */
+}
+
+.sample{
+  width: 100%;
+  height: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2rem;
+  border: 1px solid grey;
+  border-radius: 10px;
+  margin: 2rem;
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
+.sample > ul > li {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+
+}
+
+li{
+  padding: .3rem;
+}
+
+.hireme{
+  border-radius: 50px;
+  font-weight: bold;
+  background: #FDC300;
+  height: 2.5rem;
+  padding: .6rem 1rem;
+  border: none;
+}
+
+.icon{
+  background: #fff;
+  border-radius: 50%;
+  min-height: 3rem;
+}
+
+.section--second{
+  background: #F2F2F2;
+  height: 60vh;
+}
+
+.section--third{
+  background: #303030;
+  min-height: 50vh;
+}
+.section--footer{
+  background: #303030;
+  min-height: 30rem;
+}
+
+.body--container{
+  background: #fff;
+  min-height: 40rem;
+  margin-inline: 8%; 
+  position: relative;
+  top: 3rem;
+  z-index: 9999;
+  display: flex;
+
+  flex-direction: row;
+}
+
+.body--container > h1{
+  padding: 3rem;
+  margin: 2rem .3rem 2rem 2rem;
+  border: 1px solid grey;
+  border-radius: 10px;
+  max-width: 20%;
+  box-shadow: 0 10px 10px -3px #D9D9D9;
 
 }
 
