--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
-html{
+
+html {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -27,33 +28,38 @@ html{
   /* creates padding around scroll thumb */
 }
 
-.ml-1{
+.ml-1 {
   margin-left: 1rem;
 }
-.ml-3{
+
+.ml-3 {
   margin-left: 3rem;
 }
-.mr-half{
+
+.mr-half {
   margin-right: .5rem;
 }
-.mr-1{
+
+.mr-1 {
   margin-right: 1rem;
 }
-.mr-3{
+
+.mr-3 {
   margin-right: 3rem;
 }
-.mt-1{
+
+.mt-1 {
   margin-top: 1rem;
 }
 
-body{
+body {
   overflow: overlay;
   background-color: transparent;
   margin: 0;
   font-size: 100%;
 }
 
-.nav{
+.nav {
   /* position: sticky; */
   padding: 2rem 10%;
   word-spacing: rem;
@@ -65,17 +71,17 @@ body{
   color: black !important;
 }
 
-.nav--left{
+.nav--left {
   color: #201B3C;
   transform: scaleX(1.2);
 }
 
-.nav--right > a{
+.nav--right>a {
   margin-right: 3rem;
   text-decoration: none;
 }
 
-.nav__contact{
+.nav__contact {
   margin-right: 1rem;
   border-style: none;
   border-radius: 5px;
@@ -87,7 +93,7 @@ body{
   transform: scaleX(1.1);
 }
 
-.header{
+.header {
   display: grid;
   grid-template-columns: 2fr 1.5fr;
   height: 80vh;
@@ -102,7 +108,7 @@ body{
   background-size: cover;
 }
 
-.header--left{
+.header--left {
   /* margin-top: 3rem; */
   display: flex;
   justify-content: center;
@@ -119,12 +125,12 @@ body{
   /* letter-spacing: .09rem; */
 }
 
-.header--left p{
+.header--left p {
   margin: 0;
   transform: scaleX(1.3);
 }
 
-.header__contact{
+.header__contact {
   display: flex;
   align-items: center;
   margin-top: 5rem;
@@ -140,12 +146,12 @@ body{
   box-shadow: 0 20px 20px -6px #D9D9D9;
 }
 
-.header__info{
+.header__info {
   font-size: 13px;
   margin: 3rem 0;
 }
 
-.header--right{
+.header--right {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -153,16 +159,16 @@ body{
   /* margin-top: 6rem; */
 }
 
-.picture__background{
+.picture__background {
   position: absolute;
-  top:11rem;
+  top: 11rem;
   right: 14.5rem;
-  height:38rem;
-  width:35rem;
+  height: 38rem;
+  width: 35rem;
   background: rgba(255, 255, 255, 0.638);
 }
 
-.header__picture{
+.header__picture {
   /* border-radius: 50%; */
   /* border: 3rem solid #FFC965; */
   /* background: #eed8b393; */
@@ -175,26 +181,27 @@ body{
 }
 
 
-.header--links{
+.header--links {
   word-spacing: 2rem;
   font-size: 2.5rem;
   /* color: #201B3C !important; */
   margin-top: 2rem;
-  margin-left: -6rem; 
+  margin-left: -6rem;
 }
 
-a{
-  color: white;
-  color: #201B3C;
-  /* color: grey; */
-}
-a:visited{
+a {
   color: white;
   color: #201B3C;
   /* color: grey; */
 }
 
-.sample{
+a:visited {
+  color: white;
+  color: #201B3C;
+  /* color: grey; */
+}
+
+.sample {
   width: 100%;
   height: 2rem;
   display: flex;
@@ -204,25 +211,26 @@ a:visited{
   border: 1px solid grey;
   border-radius: 10px;
   margin: 2rem;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
-.sample > ul > li {
+
+.sample>ul>li {
   display: flex;
   flex-direction: row;
   list-style: none;
 }
 
-ul{
+ul {
   display: flex;
   flex-direction: row;
 
 }
 
-li{
+li {
   padding: .3rem;
 }
 
-.hireme{
+.hireme {
   border-radius: 50px;
   font-weight: bold;
   background: #FDC300;
@@ -231,30 +239,31 @@ li{
   border: none;
 }
 
-.icon{
+.icon {
   background: #fff;
   border-radius: 50%;
   min-height: 3rem;
 }
 
-.section--second{
+.section--second {
   background: #F2F2F2;
   height: 60vh;
 }
 
-.section--third{
+.section--third {
   background: #303030;
   min-height: 50vh;
 }
-.section--footer{
+
+.section--footer {
   background: #303030;
   min-height: 30rem;
 }
 
-.body--container{
+.body--container {
   background: #fff;
   min-height: 40rem;
-  margin-inline: 8%; 
+  margin-inline: 8%;
   position: relative;
   top: 3rem;
   z-index: 9999;
@@ -263,7 +272,7 @@ li{
   flex-direction: row;
 }
 
-.body--container > h1{
+.body--container>h1 {
   padding: 3rem;
   margin: 2rem .3rem 2rem 2rem;
   border: 1px solid grey;
@@ -273,7 +282,7 @@ li{
 
 }
 
-.sidebar{
+.sidebar {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -286,7 +295,7 @@ li{
   width: 10%;
 }
 
-.sidebar__nav{
+.sidebar__nav {
   display: flex;
   align-items: center;
   color: white;
@@ -294,15 +303,22 @@ li{
   text-decoration: none;
 }
 
-.sidebar__text{
+.sidebar__text {
   padding-top: 1px;
   color: #A0AEC0;
 }
 
-.sidebar__badge{
+.sidebar__badge {
   height: 10px;
   width: 10px;
   /* background-color: #108775; */
   border: 3px solid grey;
   border-radius: 50%;
+}
+
+.underConstruction {
+  display: block;
+  text-align: center;
+  background-color: #303030;
+  color: white;
 }
